fixed spacing of speaker field

--- a/css/stanford_events_importer.css
+++ b/css/stanford_events_importer.css
@@ -5,3 +5,7 @@
 #main .field-name-field-s-event-speakers {
   margin-bottom: 20px;
 }
+
+.descriptor.group-descriptor-info > .field-collection-container {
+  display: inline-block;
+}
